--- a/ReCord/Frontend/src/Style/Intro.css
+++ b/ReCord/Frontend/src/Style/Intro.css
@@ -5,7 +5,7 @@
     border-left:1px solid rgb(189, 189, 196) ;
     background-image:  url(../Stock\ Files/Live-Background.svg),url(../Stock\ Files/re-cordSVG.svg);
     background-repeat:no-repeat;
-    background-position: center bottom calc(8.375em + 0.1875rem), center right calc(12.375em + 0.1875rem);
+    background-position: center bottom calc(8.375rem + 0.1875rem), center right calc(12.375rem + 0.1875rem);
     margin: 0 0 0 -2px;
 }
 
@@ -19,66 +19,75 @@
     background-color: white;
     background-image:  url(../Stock\ Files/Live-Background.svg),url(../Stock\ Files/re-cordSVG.svg);
     background-repeat:no-repeat;
-    background-position: center bottom calc(8.375em + 0.1875rem), center right calc(12.375em + 0.1875rem);
+    background-position: center bottom calc(8.375rem + 0.1875rem), center right calc(12.375rem + 0.1875rem);
 }
 
-@media screen and (min-width: 300px) and (max-width: 360px)  {
+
+
+@media screen and (min-width: 300px) and (max-width: 320px)  {
     #intro-div-mobile-flex-display{
-        background-position: center bottom calc(8.375rem + 0.1875rem), center right calc(-10.625em + 0.1875rem);
+        background-position: center bottom 8.5625rem,center right calc(-11.625em);
+
+    }
+}
+
+@media screen and (min-width: 320px) and (max-width: 360px)  {
+    #intro-div-mobile-flex-display{
+        background-position: center bottom calc(8.375rem + 0.1875rem), center right calc(-11.625em);
     }
 }
 
 @media screen and (min-width: 360px) and (max-width: 400px)  {
     #intro-div-mobile-flex-display{
-        background-position: center bottom calc(8.375rem + 0.1875rem), center right calc(-9.625em);
+        background-position: center bottom calc(8.375rem + 0.1875rem), center right calc(-9.625rem);
     }
 }
 
 @media screen and (min-width: 400px) and (max-width: 465px)  {
     #intro-div-mobile-flex-display{
-        background-position: center bottom calc(8.375rem + 0.1875rem), center right calc(-7.625em);
+        background-position: center bottom calc(8.375rem + 0.1875rem), center right calc(-7.625rem);
     }
 }
 
 @media screen and (min-width: 465px) and (max-width: 550px)  {
     #intro-div-mobile-flex-display{
-        background-position: center bottom calc(8.375rem + 0.1875rem), center right calc(-7em);
+        background-position: center bottom calc(8.375rem + 0.1875rem), center right calc(-7rem);
     }
 }
 
 @media screen and (min-width: 550px) and (max-width: 600px)  {
     #intro-div-mobile-flex-display{
-        background-position: center bottom calc(8.375rem + 0.1875rem), center right calc(-5em);
+        background-position: center bottom calc(8.375rem + 0.1875rem), center right calc(-5rem);
     }
 }
 
 @media screen and (min-width: 600px) and (max-width: 650px)  {
     #intro-div-mobile-flex-display{
-        background-position: center bottom calc(8.375rem + 0.1875rem), center right calc(-4.5em);
+        background-position: center bottom calc(8.375rem + 0.1875rem), center right calc(-4.5rem);
     }
 }
 
 @media screen and (min-width: 650px) and (max-width: 700px)  {
     #intro-div-mobile-flex-display{
-        background-position: center bottom calc(8.375rem + 0.1875rem), center right calc(-3em);
+        background-position: center bottom calc(8.375rem + 0.1875rem), center right calc(-3rem);
     }
 }
 
 @media screen and (min-width: 700px) and (max-width: 750px)  {
     #intro-div-mobile-flex-display{
-        background-position: center bottom calc(8.375rem + 0.1875rem), center right calc(-2.5em);
+        background-position: center bottom calc(8.375rem + 0.1875rem), center right calc(-2.5rem);
     }
 }
 
 @media screen and (min-width: 750px) and (max-width: 800px)  {
     #intro-div-mobile-flex-display{
-        background-position: center bottom calc(8.375rem + 0.1875rem), center right calc(-1em);
+        background-position: center bottom calc(8.375rem + 0.1875rem), center right calc(-1rem);
     }
 }
 
 @media screen and (min-width: 800px) and (max-width: 850px)  {
     #intro-div-mobile-flex-display{
-        background-position: center bottom calc(8.375rem + 0.1875rem), center right calc(1.3em);
+        background-position: center bottom calc(8.375rem + 0.1875rem), center right calc(1.3rem);
     }
 }
 
@@ -90,66 +99,91 @@
 
 @media screen and (min-width: 900px) and (max-width: 950px)  {
     #intro-div{
-        background-position: center bottom calc(8.375rem + 0.1875rem), center right calc(-1.5em);
+        background-position: center bottom calc(8.375rem + 0.1875rem), center right calc(-1.5rem);
     }
 }
 @media screen and (min-width: 950px) and (max-width: 1000px)  {
     #intro-div{
-        background-position: center bottom calc(8.375rem + 0.1875rem), center right calc(0em);
+        background-position: center bottom calc(8.375rem + 0.1875rem), center right calc(0rem);
     }
 }
 @media screen and (min-width: 1000px) and (max-width: 1050px)  {
     #intro-div{
-        background-position: center bottom calc(8.375rem + 0.1875rem), center right calc(0.5em);
+        background-position: center bottom calc(8.375rem + 0.1875rem), center right calc(0.5rem);
     }
 }
 
 @media screen and (min-width: 1050px) and (max-width: 1100px)  {
     #intro-div{
-        background-position: center bottom calc(8.375rem + 0.1875rem), center right calc(3em);
+        background-position: center bottom calc(8.375rem + 0.1875rem), center right calc(3rem);
     }
 }
 
 @media screen and (min-width: 1100px) and (max-width: 1150px)  {
     #intro-div{
-        background-position: center bottom calc(8.375rem + 0.1875rem), center right calc(4em);
+        background-position: center bottom calc(8.375rem + 0.1875rem), center right calc(4rem);
     }
 }
 
 @media screen and (min-width: 1150px) and (max-width: 1200px)  {
     #intro-div{
-        background-position: center bottom calc(8.375rem + 0.1875rem), center right calc(5em);
+        background-position: center bottom calc(8.375rem + 0.1875rem), center right calc(5rem);
     }
 }
 @media screen and (min-width: 1200px) and (max-width: 1250px)  {
     #intro-div{
-        background-position: center bottom calc(8.375rem + 0.1875rem), center right calc(6em);
+        background-position: center bottom calc(8.375rem + 0.1875rem), center right calc(6rem);
     }
 }
 
 @media screen and (min-width: 1250px) and (max-width: 1300px)  {
     #intro-div{
-        background-position: center bottom calc(8.375rem + 0.1875rem), center right calc(7em);
+        background-position: center bottom calc(8.375rem + 0.1875rem), center right calc(7rem);
     }
 }
 
 @media screen and (min-width: 1300px) and (max-width: 1350px)  {
     #intro-div{
-        background-position: center bottom calc(8.375rem + 0.1875rem), center right calc(8em);
+        background-position: center bottom calc(8.375rem + 0.1875rem), center right calc(8rem);
     }
 }
 
 @media screen and (min-width: 1350px) and (max-width: 1400px)  {
     #intro-div{
-        background-position: center bottom calc(8.375rem + 0.1875rem), center right calc(9em);
+        background-position: center bottom calc(8.375rem + 0.1875rem), center right calc(9rem);
     }
 }
 
 @media screen and (min-width: 1400px) and (max-width: 1450px)  {
     #intro-div{
-        background-position: center bottom calc(8.375rem + 0.1875rem), center right calc(10em);
+        background-position: center bottom calc(8.375rem + 0.1875rem), center right calc(10rem);
     }
 }
+
+@media screen and (min-width: 1450px) and (max-width: 1550px)  {
+    #intro-div{
+        background-position: center bottom calc(8.375em + .1875rem),center right calc(12.375rem + .1875rem)
+    }
+}
+
+@media screen and (min-width: 1550px) and (max-width: 1700px)  {
+    #intro-div{
+        background-position: center bottom calc(8.375rem + 0.1875rem), center right calc(15.375rem);
+    }
+}
+
+/* 
+@media screen and (min-width: 1550px) and (max-width: 1600px)  {
+    #intro-div{
+        background-position: center bottom calc(8.375rem + 0.1875rem), center right calc(10rem);
+    }
+}
+
+@media screen and (min-width: 1600px) and (max-width: 1650px)  {
+    #intro-div{
+        background-position: center bottom calc(8.375rem + 0.1875rem), center right calc(10rem);
+    }
+} */
 
 #intro-head{
     display: flex;
